// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsAvailable should render multiple markers left 1`] = `
<div
  className="points-available"
>
  <span
    aria-label="Nog 2 punten mogelijk"
    className="points-available__label"
  >
    Nog 2 punten mogelijk
  </span>
</div>
`;

exports[`PointsAvailable should render no markers left 1`] = `
<div
  className="points-available"
>
  <span
    aria-label="Geen punten meer mogelijk"
    className="points-available__label"
  >
    Geen punten meer mogelijk
  </span>
</div>
`;

exports[`PointsAvailable should render one marker left 1`] = `
<div
  className="points-available"
>
  <span
    aria-label="Nog 1 punt mogelijk"
    className="points-available__label"
  >
    Nog 1 punt mogelijk
  </span>
</div>
`;
